# cv

CvSipWrapper/wengophone/src/presentation/qt/: AboutDialog.ui  AboutWindow.ui  CMakeLists-install-linux.txt  CMakeLists.txt  DialpadWidget.ui  GetFileVersion.cpp  GetFileVersion.h  ProcessManager.h  QtAbout.cpp  QtAbout.h  QtAboutDialog.cpp  QtAboutDialog.h  QtBrowserWidget.cpp  QtBrowserWidget.h  QtDialpad.cpp  QtDialpad.h  QtEnumIMProtocol.cpp  QtEnumIMProtocol.h  QtFactory.cpp  QtFactory.h  QtHttpProxyLogin.cpp  QtIMAccountHelper.cpp  QtIMAccountHelper.h  QtIMAccountMonitor.cpp  QtIdle.cpp  QtLanguage.cpp  QtNoWengoAlert.cpp  QtPresenceMenuManager.cpp  QtPresenceMenuManager.h  QtPresencePixmapHelper.cpp  QtSVGDialpad.cpp  QtSystray.cpp  QtSystray.h  QtToolBar.cpp  QtToolBar.h  QtWengoPhone.cpp  QtWengoPhone.h  QtWengoStyle.cpp  WengoPhoneWindow.ui  WinApp.cpp  (+2 more)
CvSipWrapper/wengophone/src/presentation/qt/callbar/: QtCallBar.cpp  QtCallBar.h  QtPhoneComboBox.cpp
CvSipWrapper/wengophone/src/presentation/qt/chat/: AvatarFrame.ui  AvatarWidget.ui  ChatLogViewer.ui  ChatMainWindow.ui  ChatWidget.ui  QtChatAvatarFrame.cpp  QtChatAvatarFrame.h  QtChatAvatarWidget.cpp  QtChatAvatarWidget.h  QtChatEditWidget.cpp  QtChatEditWidget.h  QtChatHandler.cpp  QtChatHandler.h  QtChatHistoryWidget.cpp  QtChatHistoryWidget.h  QtChatLogViewer.cpp  QtChatLogViewer.h  QtChatTabWidget.cpp  QtChatTabWidget.h  QtChatTheme.cpp  QtChatTheme.h  QtChatUtils.cpp  QtChatUtils.h  QtChatWidget.cpp  QtChatWidget.h  QtChatWindow.cpp  QtChatWindow.h  QtWengoStyleBar.cpp
CvSipWrapper/wengophone/src/presentation/qt/conference/: ConferenceCallWidget.ui  ConferenceInvite.ui  ConferenceInvite.ui.bak1  ConferenceListWidget.ui  ConferenceRoomWidget.ui  ConferenceRoomWidget.ui.bak1  ConfrenceVideoWindow.ui  ConfrenceVideoWindow.ui.bak1  DrawPanel.cpp  DrawPanel.h  InstantConferenceWidget.ui  MeetingPlaceWidget.ui  MemberListWidget.ui  MemberVideoFrame.ui  Message.ui  MessageFrame.cpp  MessageFrame.h  PassWordInputWidget.ui  QToolWidget.h  QtConfListTree.cpp  QtConfListTree.h  QtConfVideoWidget.cpp  QtConfVideoWidget.h  QtConferenceCallWidget.cpp  QtConferenceCallWidget.h  QtConferenceInvite.cpp  QtConferenceInvite.h  QtConferenceList.cpp  QtConferenceList.h  QtConferenceRoomWidget.cpp  QtConferenceRoomWidget.h  QtInstantConferenceWidget.cpp  QtInstantConferenceWidget.h  QtMemberList.cpp  QtMemberList.h  QtMemberListTreeModel.cpp  QtMemberListTreeModel.h  QtMessage.cpp  QtMessage.h  QtPasswordInputWidget.cpp  (+35 more)
CvSipWrapper/wengophone/src/presentation/qt/config/: AccountSettings.ui  AppearanceSettings.ui  AudioSettings-bak.ui  AudioSettings.ui  GeneralSettings.ui  GlobalServiceSetting.ui  NetworkSettings.ui  NotificationSettings.ui  QtAccountSettings.cpp  QtAccountSettings.h  QtAdvancedConfig.cpp  QtAdvancedSettings.cpp  QtAdvancedSettings.h  QtAppearanceSettings.cpp  QtAppearanceSettings.h  QtAudioSettings.cpp  QtAudioSettings.h  QtCallForwardSettings.cpp  QtCallForwardSettings.h  QtGeneralSettings.cpp  QtGeneralSettings.h  QtGlobalServiceSetting.cpp  QtGlobalServiceSetting.h  QtISettings.h  QtLanguagesSettings.cpp  QtLanguagesSettings.h  QtNetworkSettings.cpp  QtNetworkSettings.h  QtNotificationSettings.cpp  QtNotificationSettings.h  QtPrivacySettings.cpp  QtPrivacySettings.h  QtSecuritySettings.cpp  QtSecuritySettings.h  QtShowSetting.cpp  QtShowSetting.h  QtVideoSettings.cpp  QtVideoSettings.h  QtVoicemailSettings.cpp  QtVoicemailSettings.h  (+7 more)
CvSipWrapper/wengophone/src/presentation/qt/contactlist/: ContactGroupPopupMenu.cpp  ContactGroupPopupMenu.h  ContactList.ui  ContactWidget.ui  QtConferenceAction.cpp  QtConferenceAction.h  QtContact.cpp  QtContact.h  QtContactInfo.cpp  QtContactInfo.h  QtContactList.cpp  QtContactList.h  QtContactListManager.cpp  QtContactListManager.h  QtContactManager.cpp  QtContactManager.h  QtContactMenu.cpp  QtContactMenu.h  QtContactPixmap.cpp  QtContactPixmap.h  QtContactTreeKeyFilter.cpp  QtContactTreeMouseFilter.cpp  QtContactTreeMouseFilter.h  QtContactWidget.cpp  QtContactWidget.h  QtRenameGroup.cpp  QtRenameGroup.h  QtTreeViewDelegate.cpp  QtTreeViewDelegate.h
CvSipWrapper/wengophone/src/presentation/qt/filetransfer/: QtFileTransfer.cpp  QtFileTransferAcceptDialog.cpp  QtFileTransferDownloadItem.cpp  QtFileTransferItem.cpp  QtFileTransferNotifyDialog.cpp  QtFileTransferUploadItem.cpp  QtFileTransferWidget.cpp
CvSipWrapper/wengophone/src/presentation/qt/history/: HistoryWidget.ui  QtHistory.cpp  QtHistory.h  QtHistoryWidget.cpp  QtHistoryWidget.h
CvSipWrapper/wengophone/src/presentation/qt/imaccount/: AIMSettings.ui  GoogleTalkSettings.ui  ICQSettings.ui  IMAccountManager.ui  JabberSettings.ui  MSNSettings.ui  QtAIMSettings.cpp  QtGoogleTalkSettings.cpp  QtICQSettings.cpp  QtIMAccountManager.cpp  QtIMAccountPlugin.cpp  QtIMAccountPlugin.h  QtIMAccountSettings.cpp  QtIMAccountSettings.h  QtJabberSettings.cpp  QtMSNSettings.cpp  QtYahooSettings.cpp  YahooSettings.ui
CvSipWrapper/wengophone/src/presentation/qt/imcontact/: QtAddIMContact.cpp  QtAdvancedIMContactManager.cpp  QtIMContactItem.cpp  QtIMContactManagerInterface.cpp  QtSimpleIMContactManager.cpp  QtSimpleIMContactManager.h  SimpleIMContactManager.ui
CvSipWrapper/wengophone/src/presentation/qt/install/: CMakeLists-install-macosx.txt
CvSipWrapper/wengophone/src/presentation/qt/lang/: qtwengophone_bg.ts  qtwengophone_ca.ts  qtwengophone_cs.ts  qtwengophone_cy.ts  qtwengophone_da.ts  qtwengophone_de.ts  qtwengophone_el.ts  qtwengophone_en.ts  qtwengophone_en_GB.ts  qtwengophone_eo.ts  qtwengophone_es.ts  qtwengophone_fi.ts  qtwengophone_fr.ts  qtwengophone_gl.ts  qtwengophone_he.ts  qtwengophone_hu.ts  qtwengophone_it.ts  qtwengophone_ja.ts  qtwengophone_ku.ts  qtwengophone_lv.ts  qtwengophone_mn.ts  qtwengophone_nb.ts  qtwengophone_nl.ts  qtwengophone_pl.ts  qtwengophone_pt.ts  qtwengophone_pt_BR.ts  qtwengophone_ro.ts  qtwengophone_ru.ts  qtwengophone_sk.ts  qtwengophone_sl.ts  qtwengophone_sr.ts  qtwengophone_sv.ts  qtwengophone_tr.ts  qtwengophone_uz.ts  qtwengophone_vi.ts  qtwengophone_zh.ts  qtwengophone_zh_CN.ts  (+1 more)
(+2788 files in other folders)
